<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:strokeWidth="1dp"
    app:cardCornerRadius="10dp"
    app:strokeColor="@android:color/background_light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/stagesImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_stage_1"
            tools:srcCompat="@drawable/icon_stage_1" />

        <TextView
            android:id="@+id/title"
            style="@style/StagesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/title_placeholder"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/stagesImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title_placeholder" />

        <TextView
            android:id="@+id/mainGoalTitle"
            style="@style/StagesDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:text="@string/main_goal_placeholder"
            android:textColor="?android:textColorSecondary"
            app:layout_constraintStart_toEndOf="@+id/stagesImage"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/main_goal_textholder"
            style="@style/StagesBody"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/stages_mastery_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/stagesImage"
            app:layout_constraintTop_toBottomOf="@+id/mainGoalTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>